crates/alien-terraform/tests/generator/snapshots/generator__generator__helpers__azure_sandbox_image_grant.snap
---
source: crates/alien-terraform/tests/generator/helpers.rs
expression: buf
---
=== versions.tf ===
terraform {
  required_version = ">= 1.5.0"

  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = ">= 4.75, < 5.0"
    }
    azapi = {
      source  = "Azure/azapi"
      version = ">= 2.6, < 3.0"
    }
    random = {
      source  = "hashicorp/random"
      version = ">= 3.6"
    }
  }
}

=== variables.tf ===
variable "resource_prefix" {
  type        = string
  description = "Optional stable physical resource prefix. Leave empty to generate one."
  default     = ""

  validation {
    condition     = var.resource_prefix == "" || (can(regex("^[a-z][a-z0-9-]{1,38}[a-z0-9]$", var.resource_prefix)) && length(regexall("--", var.resource_prefix)) == 0)
    error_message = "resource_prefix must be 3-40 characters: lowercase letters, numbers, and hyphens; start with a letter; end with a letter or number; and not contain consecutive hyphens."
  }
}

variable "name" {
  type        = string
  description = "Human-readable application name shown in setup and cloud IAM review metadata."
}

variable "token" {
  type        = string
  description = "Install token from the application setup page. This is the same token used by the deploy CLI --token flag."
  sensitive   = true
}

variable "management_url" {
  type        = string
  description = "Optional management endpoint used by pull-style runtimes."
  default     = ""
}

variable "deployment_model" {
  type        = string
  description = "How runtime updates are delivered after setup."
  default     = "push"

  validation {
    condition     = contains(["push", "pull"], var.deployment_model)
    error_message = "deployment_model must be one of: push, pull."
  }
}

variable "advanced_settings_json" {
  type        = string
  description = "Advanced JSON-encoded deployment settings. Most installations should use the typed variables in this module instead."
  default     = "{}"
  sensitive   = true
}

variable "advanced_settings_overlay_json" {
  type        = string
  description = "JSON-encoded deployment settings merged over the package defaults. Use this for partial advanced-setting overrides that must preserve generated defaults such as compute selections."
  default     = "{}"
  sensitive   = true
}

variable "endpoint_access" {
  type        = string
  description = "Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup."
  default     = "internet"

  validation {
    condition     = contains(["internet", "private"], var.endpoint_access)
    error_message = "endpoint_access must be one of: internet, private."
  }
}

variable "updates_mode" {
  type        = string
  description = "How application updates are delivered after setup."
  default     = "auto"

  validation {
    condition     = contains(["auto", "approval-required"], var.updates_mode)
    error_message = "updates_mode must be one of: auto, approval-required."
  }
}

variable "telemetry_mode" {
  type        = string
  description = "How logs, metrics, and traces are collected."
  default     = "auto"

  validation {
    condition     = contains(["off", "auto", "approval-required"], var.telemetry_mode)
    error_message = "telemetry_mode must be one of: off, auto, approval-required."
  }
}

variable "heartbeats_mode" {
  type        = string
  description = "Whether runtime health checks are enabled."
  default     = "on"

  validation {
    condition     = contains(["off", "on"], var.heartbeats_mode)
    error_message = "heartbeats_mode must be one of: off, on."
  }
}

variable "azure_location" {
  type        = string
  description = "Azure location."
  default     = "eastus"
}

variable "azure_subscription_id" {
  type        = string
  description = "Azure subscription ID hosting the stack."
}

variable "azure_resource_group_name" {
  type        = string
  description = "Azure resource group name."
}

variable "azure_managing_tenant_id" {
  type        = string
  description = "Azure tenant ID that hosts the management identity for cross-tenant access."
  default     = ""
}

variable "azure_oidc_issuer" {
  type        = string
  description = "OIDC issuer URL for Azure Federated Identity Credential."
  default     = ""
}

variable "azure_oidc_subject" {
  type        = string
  description = "OIDC subject claim for Azure Federated Identity Credential."
  default     = ""
}

=== providers.tf ===
provider "azurerm" {
  resource_provider_registrations = "none"

  features {
    persist_id_on_create_before_polling_for_completion = true

    resource_group {
      prevent_deletion_if_contains_resources = true
    }
  }
}

provider "azapi" {}

=== resource_prefix.tf ===
resource "random_id" "resource_prefix" {
  byte_length = 4
}

=== locals.tf ===
locals {
  resource_prefix              = var.resource_prefix == "" ? format("a%s", random_id.resource_prefix.hex) : var.resource_prefix
  deployment_name              = var.name
  deployment_platform          = "azure"
  deployment_target            = "azure"
  deployment_region            = var.azure_location
  deployment_management_config = var.deployment_model == "push" ? { platform = "azure", managingTenantId = var.azure_managing_tenant_id, oidcIssuer = var.azure_oidc_issuer, oidcSubject = var.azure_oidc_subject } : null
  advanced_settings            = merge(jsondecode(var.advanced_settings_json), jsondecode(var.advanced_settings_overlay_json))
  deployment_settings          = merge(local.advanced_settings, { deploymentModel = var.deployment_model, updates = var.updates_mode, telemetry = var.telemetry_mode, heartbeats = var.heartbeats_mode, endpointAccess = var.endpoint_access })
  deployment_resources = [
    {
      id   = "default-resource-group"
      type = "azure_resource_group"
      importData = {
        subscriptionId = var.azure_subscription_id
        resourceGroup  = azurerm_resource_group.default_resource_group.name
        location       = azurerm_resource_group.default_resource_group.location
      }
    },
    {
      id   = "agents"
      type = "sandbox"
      importData = {
        sandboxGroup  = replace(lower("${local.resource_prefix}-agents"), "_", "-")
        region        = var.azure_location
        resourceGroup = var.azure_resource_group_name
      }
    },
    {
      id   = "management"
      type = "remote-stack-management"
      importData = {
        subscriptionId               = var.azure_subscription_id
        resourceGroup                = var.azure_resource_group_name
        tenantId                     = data.azurerm_client_config.management_current.tenant_id
        identityId                   = azurerm_user_assigned_identity.management.id
        principalId                  = azurerm_user_assigned_identity.management.principal_id
        clientId                     = azurerm_user_assigned_identity.management.client_id
        managementPermissionsApplied = true
      }
    }
  ]
}

=== default_resource_group.tf ===
resource "azurerm_resource_group" "default_resource_group" {
  name     = var.azure_resource_group_name
  location = var.azure_location
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "default-resource-group"
    "resource-type" = "resource-group"
  }
}

resource "azurerm_role_definition" "setup_management_manage_sandbox_disk_images_0" {
  name               = "${local.resource_prefix}-Manage Sandbox Disk Images [mgmt]"
  role_definition_id = uuidv5("oid", "deployment:azure:mgmt-res-role-def:${local.resource_prefix}:sandbox/images:manage-sandbox-disk-images")
  scope              = "/subscriptions/${var.azure_subscription_id}/resourceGroups/${var.azure_resource_group_name}"
  description        = "Used by ${local.deployment_name}. Allows creating, reading and deleting disk images under the selected sandbox group. Resource prefix: ${local.resource_prefix}."

  permissions {
    actions = []
    data_actions = [
      "Microsoft.App/sandboxGroups/diskimages/delete",
      "Microsoft.App/sandboxGroups/diskimages/read",
      "Microsoft.App/sandboxGroups/diskimages/write"
    ]
    not_actions      = []
    not_data_actions = []
  }

  assignable_scopes = [
    "/subscriptions/${var.azure_subscription_id}/resourceGroups/${var.azure_resource_group_name}"
  ]
}

=== agents.tf ===
resource "azapi_resource" "agents" {
  type      = "Microsoft.App/sandboxGroups@2026-02-01-preview"
  name      = replace(lower("${local.resource_prefix}-agents"), "_", "-")
  parent_id = "/subscriptions/${var.azure_subscription_id}/resourceGroups/${var.azure_resource_group_name}"
  location  = var.azure_location
  body      = {}
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "agents"
    "resource-type" = "sandbox"
  }
  schema_validation_enabled = false
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

resource "azurerm_role_assignment" "agents_images_0" {
  name               = uuidv5("oid", "deployment:azure:sandbox-images:${local.resource_prefix}:agents:0")
  scope              = azapi_resource.agents.id
  role_definition_id = azurerm_role_definition.setup_management_manage_sandbox_disk_images_0.role_definition_resource_id
  principal_id       = azurerm_user_assigned_identity.management.principal_id
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

=== management.tf ===
data "azurerm_client_config" "management_current" {}

resource "azurerm_user_assigned_identity" "management" {
  name                = "${local.resource_prefix}-management-identity"
  resource_group_name = var.azure_resource_group_name
  location            = var.azure_location
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "management"
    "resource-type" = "management"
  }
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

resource "azurerm_federated_identity_credential" "management_fic" {
  count               = var.azure_oidc_issuer != "" && var.azure_oidc_subject != "" ? 1 : 0
  name                = "${local.resource_prefix}-federated-credential"
  resource_group_name = var.azure_resource_group_name
  parent_id           = azurerm_user_assigned_identity.management.id
  audience = [
    "api://AzureADTokenExchange"
  ]
  issuer  = var.azure_oidc_issuer
  subject = var.azure_oidc_subject
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

=== registration.tf ===
resource "terraform_data" "deployment_registration" {
  input = {
    platform                    = local.deployment_platform
    token                       = var.token
    name                        = var.name
    resource_prefix             = local.resource_prefix
    setup_target                = ""
    setup_import_format_version = 1
    setup_fingerprint           = ""
    setup_fingerprint_version   = 0
    management_url              = var.management_url
    management_config           = local.deployment_management_config
    stack_settings              = local.deployment_settings
    resources                   = local.deployment_resources
    inputValues                 = {}
  }
  depends_on = [
    azurerm_resource_group.default_resource_group,
    azurerm_role_definition.setup_management_manage_sandbox_disk_images_0,
    azapi_resource.agents,
    azurerm_role_assignment.agents_images_0,
    azurerm_user_assigned_identity.management,
    azurerm_federated_identity_credential.management_fic
  ]
}

=== outputs.tf ===
output "deployment_target" {
  value       = "azure"
  description = "Terraform module target."
}

output "deployment_resource_prefix" {
  value       = local.resource_prefix
  description = "Physical resource prefix."
}

output "deployment_platform" {
  value       = local.deployment_platform
  description = "Target platform."
}

output "deployment_region" {
  value       = local.deployment_region
  description = "Target cloud region or location."
}

output "deployment_setup_target" {
  value       = ""
  description = "Setup target."
}

output "deployment_setup_import_format_version" {
  value       = 1
  description = "Setup registration payload format version."
}

output "deployment_setup_fingerprint" {
  value       = ""
  description = "Setup compatibility fingerprint."
}

output "deployment_setup_fingerprint_version" {
  value       = 0
  description = "Setup fingerprint algorithm version."
}

output "deployment_management_config" {
  value       = jsonencode(local.deployment_management_config)
  description = "Deployment registration management configuration JSON."
}

output "deployment_stack_settings" {
  value       = jsonencode(local.deployment_settings)
  description = "Deployment registration settings JSON."
  sensitive   = true
}

output "deployment_resources" {
  value       = jsonencode(local.deployment_resources)
  description = "Deployment registration resource metadata JSON."
}

=== README.md ===
# Deployment setup - byo-sandbox

Target: `azure`.

This module creates setup-owned infrastructure, grants the management access needed after setup, and prepares deployment registration metadata. Review the generated `.tf` files before applying; each resource file maps to one setup resource.

## Inputs

Required:

- `token`: install token from the setup page.
- `name`: deployment name to include in the registration metadata.

Common optional settings:

- `resource_prefix`: stable physical-name prefix. Leave empty to generate one.
- `management_url`: optional management endpoint used by pull-style runtimes.
- `deployment_model`: `push` or `pull`.
- `updates_mode`: `auto` or `approval-required`.
- `telemetry_mode`: `off`, `auto`, or `approval-required`.
- `heartbeats_mode`: `off` or `on`.
- `advanced_settings_json`: complete advanced deployment settings JSON. Most installs should keep the generated default.
- `advanced_settings_overlay_json`: partial advanced settings merged over package defaults, preserving generated values such as compute selections.

Azure settings:

- `azure_subscription_id`: target subscription ID.
- `azure_location`: Azure location.
- `azure_resource_group_name`: target resource group name.
- `azure_managing_tenant_id`, `azure_oidc_issuer`, `azure_oidc_subject`: management identity trust settings when this setup grants Azure management access.

## The sandbox group

The sandbox group is created through the `azapi` provider at `Microsoft.App/sandboxGroups@2026-02-01-preview`, because the AzureRM provider has no typed resource for it. Being a preview API, its shape and regional availability can change.

That resource sets `schema_validation_enabled = false`: the `azapi` provider ships a bundled schema index that does not yet carry the type, so its client-side pre-check would reject a request ARM accepts. Azure Resource Manager still validates the request in full at apply.

The subscription must have the `Microsoft.App` resource provider registered before you apply:

```bash
az provider register --namespace Microsoft.App
```

`terraform destroy` removes the group, and removing it deletes every sandbox inside it.

## Run

Use your organization's normal backend and approval workflow. A typical local review looks like:

```bash
export TF_VAR_name="byo-sandbox"
export TF_VAR_token="..."
terraform init
terraform validate
terraform plan -out=tfplan
terraform apply tfplan
```

## Registration

This module exposes `deployment_management_config`, `deployment_stack_settings`, `deployment_resources`, and (when the stack declares deployer inputs) `deployment_input_values` outputs for registration flows managed outside Terraform.

## Outputs

- `deployment_management_config`: management endpoint and credential-boundary metadata.
- `deployment_stack_settings`: deployment settings JSON assembled from typed variables, package defaults, and advanced-setting overlays.
- `deployment_resources`: setup-owned resource metadata handed to the deployment runtime.
- `deployment_input_values`: deployer input values JSON, emitted only when the stack declares deployer inputs.
- `deployment_id` and `deployment_token`: emitted only when Terraform performs registration.
